--- a/src/App.css
+++ b/src/App.css
@@ -24,29 +24,45 @@ body{
 }
 
 .logo{
-  transition: all 0.5s;
+  transition: all 0.65s;
   cursor: pointer;
 }
 
 .logo:hover{
-  -webkit-transform: scale(1.5);
-  transform: scale(1.5);
+  -webkit-transform: scale(2);
+  transform: scale(1.3);
 }
 
-.foto_lucas{
+.foto_didio{
   width: 180px;
   height: 180px;
   transition: all 0.5s;
   cursor: pointer;
 }
 
-.foto_lucas:hover{
+.foto_didio:hover{
   -webkit-filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
   filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
 
 }
 
-.nome_lucas{
+.nome_didio{
+  color: white;
+}
+
+.foto_henrique{
+  width: 180px;
+  height: 180px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.foto_henrique:hover{
+  -webkit-filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
+  filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
+}
+
+.nome_henrique{
   color: white;
 }
 
@@ -66,34 +82,34 @@ body{
   color: white;
 }
 
-.foto_arthur{
+.foto_thalia{
   width: 180px;
   height: 180px;
   transition: all 0.5s;
   cursor: pointer;
 }
 
-.foto_arthur:hover{
+.foto_thalia:hover{
   -webkit-filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
   filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
 }
 
-.nome_arthur{
+.nome_thalia{
   color: white;
 }
 
-.foto_maranhao{
+.foto_thales{
   width: 180px;
   height: 180px;
   transition: all 0.5s;
   cursor: pointer;
 }
 
-.foto_maranhao:hover{
+.foto_thales:hover{
   -webkit-filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
   filter: drop-shadow(15px 10px 5px rgba(161, 78, 168, 0.5));
 }
 
-.nome_maranhao{
+.nome_thales{
   color: white;
 }
