--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,6 @@ body{
 }
 
 .logo:hover{
-  -webkit-transform: scale(2);
   transform: scale(1.3);
 }
 
@@ -63,8 +62,7 @@ body{
 .foto_thales:hover,
 .foto_thalia:hover,
 .foto_didio:hover{
-  -webkit-transform: scale(1.2);
-  -webkit-filter: drop-shadow(15px 10px 5px rgba(0, 0, 0, 0.5));
+  transform: scale(1.2);
   filter: drop-shadow(15px 10px 5px rgba(0, 0, 0, 0.5));
 }
 
